--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,74 @@
     transform: rotate(360deg);
   }
 }
+.logo-image{
+  margin: auto;
+  width: 500px;
+}
+.main{
+  padding-top: 30px;
+  background-color:#fbf3da;
+}
+.content1{
+  width: 400px;
+}
+.content2{
+  width: 850px;
+  text-align: left;
+}
+.upper-row{
+  display: flex;
+}
+.content3{
+  margin: auto;
+  width: 1100px;
+}
+hr{
+  border: 2px solid red;
+  width: 95%;
+  margin: auto;
+}
+.row{
+  display: flex;
+  margin: auto;
+}
+
+.container-fluid{
+  background-color: red;
+  padding:30px;
+  color: white;
+}
+vr{
+  border-left: 1.5px solid red;
+  height: 10px;
+  padding-right: 2px;
+}
+@media screen and (max-width: 600px) {
+  .upper-row{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+  }
+  .content1{
+    width: 300px;
+    height: 400px;
+    margin: auto;
+   }
+
+  .content2 {
+    width: 450px;
+    height: 300px;
+    margin: auto;
+
+  }
+  .content3{
+    width: 450px;
+    margin: auto;
+  }
+  .second-mid{
+    margin-top: 400px;
+    width: 450px;
+    
+  }
+};
+
