--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,65 @@ vr{
   height: 10px;
   padding-right: 2px;
 }
-@media screen and (max-width: 500px) {
+@media (min-width: 992px) and (max-width: 1300px){
+  .upper-row{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+  }
+  .content1{
+    width: 200px;
+    height: 300px;
+    margin: auto;
+   }
+
+  .content2 {
+    width: 700px;
+    height: 400px;
+    margin: auto;
+
+  }
+  .content3{
+    width: 350px;
+    margin: auto;
+  }
+  .second-mid{
+    margin: auto;
+    margin-top: 350px;;
+    
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+
+  .upper-row{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+  }
+  .content1{
+    width: 200px;
+    height: 300px;
+    margin: auto;
+   }
+
+  .content2 {
+    width: 600px;
+    height: 400px;
+    margin: auto;
+
+  }
+  .content3{
+    width: 350px;
+    margin: auto;
+  }
+  .second-mid{
+    margin: auto;
+    margin-top: 350px;;
+    
+  }
+
+}
+@media screen and (max-width: 767px) {
   .upper-row{
     display: flex;
     flex-direction: column;
@@ -101,10 +159,9 @@ vr{
     margin: auto;
   }
   .second-mid{
-    margin-top: 450px;
-    width: 400px;
-    padding-left: 40px;
+    margin:auto;
+    margin-top: 550px;
     
+  
   }
 };
-
